force-app/main/default/objects/Job_Control__c.object
<CustomObject>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Job Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <label>Job_Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Records_Processed__c</fullName>
        <label>Number of Records Processed</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Records_to_Process__c</fullName>
        <label>Number of Records to Process</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Name__c</fullName>
        <label>Process Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Course</fullName>
                </value>
                <value>
                    <fullName>CourseOffering</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>UnitOffering</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Calendar_Dates</fullName>
                    <label>Calendar Dates</label>
                </value>
                <value>
                    <fullName>CRICOS_Code</fullName>
                    <label>CRICOS Code</label>
                </value>
                <value>
                    <fullName>Course_Fee</fullName>
                    <label>Course Fee</label>
                </value>
                <value>
                    <fullName>Org_Unit</fullName>
                </value>
                <value>
                    <fullName>Course Version</fullName>
                    <isActive>false</isActive>
                    <label>Course Version</label>
                </value>
                <value>
                    <fullName>CourseVersion</fullName>
                    <isActive>false</isActive>
                    <label>CourseVersion</label>
                </value>
                <value>
                    <fullName>CourseVersions</fullName>
                    <isActive>false</isActive>
                    <label>CourseVersions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loading Target In Progress</fullName>
                </value>
                <value>
                    <fullName>Target Load Completed</fullName>
                </value>
                <value>
                    <fullName>CRM Ready to Process</fullName>
                </value>
                <value>
                    <fullName>Staging Load Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Update_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>To find the number of times the record was updated in salesforce</description>
        <label>Record Update Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Process_Name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Course-All</fullName>
                </value>
                <value>
                    <fullName>Course-Published</fullName>
                </value>
                <value>
                    <fullName>Unit Sets</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Calendar_Dates</fullName>
                </value>
                <value>
                    <fullName>CRICOS_Codes</fullName>
                </value>
                <value>
                    <fullName>Course_Fee</fullName>
                    <label>Course Fee</label>
                </value>
                <value>
                    <fullName>Org_Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Job_Code__c</columns>
        <columns>End_Time__c</columns>
        <columns>Number_of_Records_Processed__c</columns>
        <columns>Number_of_Records_to_Process__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Job_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Calendar</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Job_Code__c</columns>
        <columns>End_Time__c</columns>
        <columns>Number_of_Records_Processed__c</columns>
        <columns>Number_of_Records_to_Process__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Job_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Name__c</field>
            <operation>equals</operation>
            <value>Calendar,Calendar_Dates</value>
        </filters>
        <label>Calendar</label>
    </listViews>
    <listViews>
        <fullName>Org_Unit</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Job_Code__c</columns>
        <columns>End_Time__c</columns>
        <columns>Number_of_Records_Processed__c</columns>
        <columns>Number_of_Records_to_Process__c</columns>
        <columns>Processing_Status__c</columns>
        <columns>Process_Name__c</columns>
        <columns>Start_Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Job_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Name__c</field>
            <operation>equals</operation>
            <value>Org_Unit</value>
        </filters>
        <label>Org Unit</label>
    </listViews>
    <nameField>
        <displayFormat>J-{0000000}</displayFormat>
        <label>Job Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Control</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>